--- a/app/src/main/res/layout/battery_saver_fragment.xml
+++ b/app/src/main/res/layout/battery_saver_fragment.xml
@@ -58,12 +58,25 @@
             android:id="@+id/tvBatterySaverBottom"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="@string/admob_size"
+        ads:adUnitId="@string/admob_banner"/>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="gone"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/adView"
     android:id="@+id/clBatterySaver"
+    android:visibility="gone"
     >
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="0dp"
@@ -73,11 +86,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintWidth_percent="1"
+        app:layout_constraintWidth_percent="0.5"
         app:layout_constraintDimensionRatio="1:1"
         app:lottie_rawRes="@raw/battery_main"
-        android:scaleX="2"
-        android:scaleY="2"
+        android:scaleX="3"
+        android:scaleY="3"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         />
