--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,21 +7,57 @@
     android:background="@color/background"
     tools:context=".ui.MainFragment.MainFragment">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textSize="18sp"
-    android:text="35%"
-    android:includeFontPadding="false"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.05"
-    app:layout_constraintVertical_bias="0.05"
-    android:textColor="@color/white"
-    android:fontFamily="monospace"
-    android:id="@+id/tvUsedMemory"
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_main_circle"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintVertical_bias="0.3"
+        android:id="@+id/ivCircle"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ivCircle"
+        app:layout_constraintBottom_toBottomOf="@+id/ivCircle"
+        app:layout_constraintVertical_bias="0.3"
+        android:textSize="48sp"
+        android:textColor="@color/white"
+        android:id="@+id/tvPercentMemory"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ivCircle"
+        app:layout_constraintBottom_toBottomOf="@+id/ivCircle"
+        app:layout_constraintVertical_bias="0.5"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:text="@string/scan"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text="35%"
+        android:includeFontPadding="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintVertical_bias="0.05"
+        android:textColor="@color/white" android:fontFamily="monospace"
+        android:id="@+id/tvUsedMemory"
     />
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:layout_width="0dp"
