--- a/app/src/main/res/layout/file_manager_fragment.xml
+++ b/app/src/main/res/layout/file_manager_fragment.xml
@@ -6,6 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
     tools:context=".ui.FilesFragment.FileManagerFragment">
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="@string/admob_size"
+        ads:adUnitId="@string/admob_banner"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/adView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -109,10 +127,10 @@
                         android:textColor="@color/background"
                         android:textAllCaps="false"
                         app:cornerRadius="20dp"
+                        android:id="@+id/btnCleanMusic"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
-
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -182,6 +200,7 @@
                         android:textColor="@color/background"
                         android:textAllCaps="false"
                         app:cornerRadius="20dp"
+                        android:id="@+id/btnVideosClean"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -255,9 +274,11 @@
                         android:textColor="@color/background"
                         android:textAllCaps="false"
                         app:cornerRadius="20dp"
+                        android:id="@+id/btnImages"
                         />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
