--- a/app/src/main/res/layout/boost_fragment.xml
+++ b/app/src/main/res/layout/boost_fragment.xml
@@ -88,8 +88,20 @@
             android:visibility="gone"
             android:id="@+id/ivBoostFinished"
             />
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvBoostBottom"
+            app:layout_constraintBottom_toBottomOf="@id/tvBoostBottom"
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintDimensionRatio="1:1"
+            android:id="@+id/ivAppIcon"
+            />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/boostRam"
             android:textSize="20sp"
@@ -100,7 +112,22 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.8"
             android:textAlignment="center"
+            app:layout_constraintWidth_percent="0.5"
             android:id="@+id/tvBoostBottom"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.9"
+            android:textAlignment="center"
+            app:layout_constraintWidth_percent="0.5"
+            android:id="@+id/tvAppSize"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 <androidx.constraintlayout.widget.ConstraintLayout
