--- a/app/src/main/res/layout/cool_fragment.xml
+++ b/app/src/main/res/layout/cool_fragment.xml
@@ -82,6 +82,18 @@
             android:visibility="gone"
             android:id="@+id/ivBoostFinished"
             />
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvCoolBottom"
+            app:layout_constraintBottom_toBottomOf="@id/tvCoolBottom"
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintDimensionRatio="1:1"
+            android:id="@+id/ivAppIcon"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,6 +107,20 @@
             app:layout_constraintVertical_bias="0.8"
             android:textAlignment="center"
             android:id="@+id/tvCoolBottom"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.9"
+            android:textAlignment="center"
+            app:layout_constraintWidth_percent="0.5"
+            android:id="@+id/tvAppSize"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
