--- a/app/src/main/res/layout/finish_or_recommen_fragment.xml
+++ b/app/src/main/res/layout/finish_or_recommen_fragment.xml
@@ -6,13 +6,17 @@
     android:background="@color/background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.FinisheOrRecommendFragment.FinishOrRecommenFragment">
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="back"
-        android:textSize="20sp"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintVertical_bias="0.03"
+
         android:id="@+id/tvBack"
         />
 <TextView
@@ -27,6 +31,7 @@
     app:layout_constraintVertical_bias="0.1"
     android:text="@string/CleanDone"
     android:textAlignment="center"
+    android:id="@+id/tvTopText"
     />
     <View
         android:layout_width="0dp"
@@ -67,4 +72,31 @@
     app:layout_constraintBottom_toBottomOf="@+id/cpiDoneProgress"
     android:src="@drawable/ic_done"
     />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recommend"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        android:textColor="@color/white"
+        android:id="@+id/tvRecommend"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/button_delete"
+        app:layout_constraintWidth_percent="0.5"
+        app:cornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        android:textAllCaps="false"
+        android:id="@+id/mbtnRecommend"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
